Tue Jan 27 15:17:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (host_str): numeric address should be unsigned.
	  [ruby-core:18971]

Mon Jan 26 11:12:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/tmpdir.rb: setup buffer with nul characters instead of spaces.
	  fixed [ruby-dev:36493]

Sun Jan 25 00:07:23 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/formatters/pretty.rb (REXML::Formatters::Pretty#wrap):
	  abandon wrapping if the line contains no space.  [ruby-dev:36045]
	  fix: #342

Sun Jan 25 00:02:23 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/matrix.rb (Vector#eql?): typo of the method name as "eqn?".
	  (Vector#eqn?): removed. Defined by mistake.
	  Fixes [ruby-dev:36294]. Reported by weda <weda AT
	  issp.u-tokyo.ac.jp> and an anonymous user.

	* test/matrix/test_matrix.rb: added.

	* test/matrix/test_vector.rb: added.

Fri Jan 23 11:49:45 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: added an entry for REXML.

	* lib/rexml/document.rb: fixed typo.

Fri Jan 23 11:49:45 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/rexml/document.rb: limit entity expansion.  Thanks, Luka
	  Treiber, Mitja Kolsek, and Michael Koziarski.  backported from
	  trunk r19033, r19317, r19318.

	* lib/rexml/entity.rb: ditto.

	* test/rexml/test_document.rb: ditto.

Thu Jan 22 15:19:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_load): arg.data is no longer a VALUE but a
	  st_table, and freed in load_ensure.  pointed out by pegacorn.
	  [ruby-dev:37008]

Thu Jan 22 15:19:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_mark_set): new function to mark keys.

	* marshal.c (struct dump_arg, struct load_arg): added wrappers to mark
	  data entries.  backport from trunk r13527,r13528,r13961,r16533.
	  [ruby-dev:36082]

Wed Jan 21 11:12:55 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (filetime_to_timeval): new function, split from
	  gettimeofday().
