@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-01-27"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090127
-#define RUBY_PATCHLEVEL 97
+#define RUBY_PATCHLEVEL 98
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
